add: vercel config

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "backend",
+  "name": "talktothrive-api",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js"
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "build": "echo 'No build step required'"
   },
   "author": "",
   "license": "ISC",
